--- a/README
+++ b/README
@@ -38,3 +38,7 @@ ssh -L 5555:localhost:8000 pd219411@students.mimuw.edu.pl
 PYTHONIOENCODING=UTF-8 python downloader.py > <file>
 
 https://docs.djangoproject.com/en/1.8/howto/custom-template-tags/
+
+
+#TESTY (problem z unittestem i sciezkami pod virtualenv)
+./manage.py test wybory.tests
